--- a/config-center-demo/src/main/resources/application.properties
+++ b/config-center-demo/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
 server.port=8081
 
+#开启配置中心
+config.center.redis.enable=true
+#RedisTemplate
 spring.redis.host=192.168.220.98
 spring.redis.port=6379
 spring.redis.password=hawk9821
@@ -8,5 +11,3 @@ spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.min-idle=0
 spring.redis.jedis.pool.max-wait=1000
 
-#开启配置中心
-config.center.redis.enable=true
